<resources>
    <string name="type">Type</string>
    <string name="app_name">GoTogether</string>
    <string name="globe_illustration">Illustration of a globe with travel routes</string>
    <string name="app_logo">GoTogether logo</string>
    <string name="email_icon">Continue with email</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">Type new password</string>
    <string name="confirm_new_password">Re-type new password</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="reset_password">Reset Password</string>
    <string name="empty_data">Please enter both email and password</string>
    <string name="error_name">Already taken!</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="error_password">Password must be 6–10 characters!</string>
    <string name="incorrect_password">Passwords do no match!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="invalid_data">Invalid email or password!</string>
    <string name="resend"><u>Don’t have any? Resend</u></string>
    <string name="register_email">Register with <u>Email</u></string>
    <string name="have_account">Already have an account? <u>Log in</u></string>
    <string name="no_account">Don\'t have an account? <u>Sign up</u> </string>
    <string name="instruction_text">Please write your contact details and we\nwill send a link to reset your\npassword</string>
    <string name="send_email">Send Mail</string>
    <string name="code">Verification Code</string>
    <string name="enter_code">Enter code</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="create_plan">Create Plan</string>
    <string name="plan_name">Plan name</string>
    <string name="enter_plan_name">Enter plan name</string>
    <string name="upload">Upload an image</string>
    <string name="date">Date</string>
    <string name="about_trip">About trip</string>
    <string name="type_something">Type something</string>
    <string name="destination">Destination</string>
    <string name="plan_dest"><u>Plan Destination</u></string>
    <string name="about_destination">Where is the trip?</string>
    <string name="interests">Interests</string>
    <string name="create">Create</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="filter_button">Open filter options</string>
    <string name="search_text">Find things you’re interested in…</string>
    <string name="greeting_text">Let\'s explore the world together!</string>
    <string name="bucket_list">Destinations to add to you bucket list</string>
    <string name="country_image">Country image</string>
    <string name="back">Back button</string>
    <string name="upload_image">Upload an image</string>
    <string name="text_counter_initial">0/100</string>
    <string name="select_image_message">Select an image from gallery.</string>
    <string name="select_image_button">Open the gallery</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="or">OR</string>
    <string name="participants">Participants</string>
    <string name="managed_by">Managed By</string>
    <string name="open_profile">Open profile</string>
    <string name="join">Join Plan</string>
    <string name="unjoin">Leave Plan</string>
    <string name="upcoming_plans">Upcoming plans</string>
    <string name="type_message">Type a message</string>
    <string name="send_message">Send a message</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="searchLocation">Search around me</string>
    <string name="rate">Rate</string>
    <string name="rating">Rating:</string>
    <string name="comments">Comments</string>
    <string name="directions">Directions</string>
    <string name="done">Done</string>
    <string name="details">Details</string>
    <string name="routes">Routes</string>
    <string name="ratedLocations">Rated locations</string>
    <string name="avgRating">Average Rating</string>
    <string name="signOut">Sign out</string>
    <string name="changeMap">Change map view</string>
    <string name="comment">Write a comment</string>
    <string name="information">Information</string>
    <string name="locations_permission_deny">To enable your location please visit Settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="error_while_searching">Error while searching</string>
    <string name="register_error">Please enter matching passwords</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="camera_forbidden">Access to camera was denied</string>
    <string name="camera_failed">Error with the camera</string>
    <string name="invalid_registration">Please make sure that you enter a valid email and your first name is over 6 letters</string>
    <string name="back_button">Back</string>
    <string name="desc_italy">Ne znam kakvo da napisha tuka</string>
    <string name="view_plans">View Plans</string>
    <string name="select_destination">Select destination</string>
    <string name="arrival_date">Arrival date</string>
    <string name="departure_date">Departure date</string>
    <string name="search">Search</string>
    <string name="search_plan">Search Plan</string>
    <string name="profile_picture">Profile picture</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add photo</string>
    <string name="send_mess">Send a message</string>
    <string name="view_mess">View messages</string>
    <string name="planned_dest">Planned Destinations</string>
    <string name="list_planned_dest">List of planned travel destinations</string>
    <string name="edit_biography">Edit biography</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_language">Change Language</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="log_out">Log Out</string>
    <string name="view_plan">View plan info</string>
    <string name="plan_image">Plan image</string>
    <string name="photo">Photo</string>
    <string name="delete">Delete</string>
    <string name="write_comment">Write comment</string>
    <string name="send_comment">Send comment</string>
    <string name="name_counter">0/20</string>
    <string name="delete_trip_title">Delete Trip</string>
    <string name="delete_trip_message">Are you sure you want to delete this trip? This action cannot be undone.</string>
    <string name="trip_deleted">Trip deleted successfully.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>