<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:id="@+id/planTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="8dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/planImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/plan_image"
            android:background="@color/gray"
            app:shapeAppearanceOverlay="@style/RoundedImageStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:src="@drawable/ic_location"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp" />
            <TextView
                android:id="@+id/planLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/plan_dest"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <ImageView
                android:src="@drawable/ic_nav_calendar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/date"/>
            <TextView
                android:id="@+id/planDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:clipToPadding="false"
            android:scrollbars="horizontal"
            android:contentDescription="@string/participants"/>

        <!-- About Trip -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_trip"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/planDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_something"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/managed_by"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_nav_profile"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_picture"
                app:shapeAppearanceOverlay="@style/CircleImageStyle"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="@string/open_profile" />
        </LinearLayout>


        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/black"
            android:minWidth="120dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp" />

    </LinearLayout>
</ScrollView>
