<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/gray"
        android:scaleType="centerCrop"
        android:contentDescription="@string/destination"
        app:shapeAppearanceOverlay="@style/RoundedImageStyle" />


    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:contentDescription="@string/comments"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="80dp">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="comment"
            android:hint="@string/write_comment"
            android:inputType="text" />

        <ImageView
            android:id="@+id/sendCommentImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/send_comment"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>
