<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_plan"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

       <AutoCompleteTextView
            android:id="@+id/destinationNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_destination"
            android:autofillHints="destination"
            android:background="@drawable/round_input"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:inputType="text"
            android:padding="12dp"
           android:layout_marginTop="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/arrival_date"
            android:autofillHints="date"
            android:background="@drawable/round_input"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:padding="12dp"
            tools:ignore="TextFields"
            android:layout_marginTop="18dp"/>


        <EditText
            android:id="@+id/departureDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/departure_date"
            android:autofillHints="date"
            android:background="@drawable/round_input"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:padding="12dp"
            tools:ignore="TextFields"
            android:layout_marginTop="18dp"/>


        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:textColor="@color/black"
            android:minWidth="120dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>


    </LinearLayout>
</ScrollView>
